<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_store_small"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_Fac"
            android:icon="@drawable/ic_fac"
            android:title="@string/Fac" />



        <item
            android:id="@+id/nav_Int"
            android:icon="@drawable/ic_book"
            android:title="@string/Ins" />
        <item
            android:id="@+id/nav_Goo"
            android:icon="@drawable/ic_movies"
            android:title="@string/google" />

        <item
            android:id="@+id/nav_Tw"
            android:icon="@drawable/ic_tw"
            android:title="@string/Tw" />


    </group>

</menu>